@@ -1,5 +1,9 @@
 CHANGELOG
 
+UNRELEASED
+  * FIX: #208, getFacetValues should return an empty array if the facet is
+  defined but there are no returned values for it (and not throw an exception)
+
 2.3.3 - 2015-09-09
   * FIX: hasRefinements fix, should check facet, disjunctive, hierarchical, numeric
 
